# custom-format

./: Cargo.toml  README.md  check_release.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
custom-format/: Cargo.toml  LICENSE-Apache  LICENSE-MIT
custom-format-macros/: Cargo.toml
custom-format-macros/src/: lib.rs
custom-format-macros/src/fmt/: mod.rs  output.rs  parse.rs  process.rs  utils.rs
custom-format-tests/: Cargo.toml
custom-format-tests/src/: main.rs  tests.rs
custom-format-tests/src/tests/: compile_time.rs  mod.rs  runtime.rs
custom-format/examples/: strftime.rs
custom-format/src/: lib.rs
examples/: strftime.rs  strftime_compile_time.rs  strftime_runtime.rs
src/: compile_time.rs  lib.rs  runtime.rs
