[workspace]
members = ["custom-format-macros", "custom-format-tests"]

[package]
name = "custom-format"
version = "0.1.2"
edition = "2018"
authors = ["x-hgg-x"]
repository = "https://github.com/x-hgg-x/custom-format"
description = "Custom formatting for Rust."
license = "MIT OR Apache-2.0"
keywords = ["no-std", "format", "string", "fmt", "macro"]
categories = ["no-std", "rust-patterns", "value-formatting"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[dependencies]
custom-format-macros = { version = "0.1.2", path = "custom-format-macros", default-features = false }

[features]
# Compile-time formatting
compile-time = []

# Runtime formatting
runtime = []

# Better parsing (longer compile time)
better-parsing = ["custom-format-macros/better-parsing"]

# Default
default = ["compile-time", "runtime", "better-parsing"]
