[workspace]
members = ["custom-format-macros", "custom-format-tests"]

[package]
name = "custom-format"
version = "0.1.2"
edition = "2018"
authors = ["x-hgg-x"]
repository = "https://github.com/x-hgg-x/custom-format"
description = "Custom formatting for Rust."
license = "MIT OR Apache-2.0"
keywords = ["no-std", "format", "string", "fmt", "macro"]
categories = ["no-std", "rust-patterns", "value-formatting"]
readme = "README.md"

[dependencies]
custom-format-macros = { version = "0.1.2", path = "custom-format-macros" }

[features]
compile-time = []
runtime = []
default = ["compile-time", "runtime"]
