[workspace]
members = ["custom-format-macros", "custom-format-tests"]

[package]
name = "custom-format"
version = "0.3.3"
edition = "2024"
authors = ["x-hgg-x"]
repository = "https://github.com/x-hgg-x/custom-format"
description = "Custom formatting for Rust."
license = "MIT OR Apache-2.0"
keywords = ["no-std", "format", "string", "fmt", "macro"]
categories = ["no-std", "rust-patterns", "value-formatting"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
custom-format-macros = { version = "0.3.2", path = "custom-format-macros" }

[features]
compile-time = []
runtime = []
default = ["compile-time", "runtime"]
