[package]
name = "custom-format-macros"
version = "0.0.4"
edition = "2021"
authors = ["x-hgg-x"]
repository = "https://github.com/x-hgg-x/custom-format"
description = "Procedural macros for the custom-format crate."
license = "MIT OR Apache-2.0"
keywords = ["format", "string", "fmt", "macro"]
categories = ["rust-patterns", "value-formatting"]
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true

[dependencies]
litrs = { version = "0.2.3", default-features = false }
unicode-ident = "1.0"

[dev-dependencies]
proc-macro2 = "1.0"
unicode-normalization = "0.1.21"

[features]
compile-time = []
runtime = []
