[package]
name = "custom-format-macros"
version = "0.1.1"
edition = "2018"
authors = ["x-hgg-x"]
repository = "https://github.com/x-hgg-x/custom-format"
description = "Procedural macros for the custom-format crate."
license = "MIT OR Apache-2.0"
keywords = ["format", "string", "fmt", "macro"]
categories = ["rust-patterns", "value-formatting"]
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true

[dependencies.litrs]
version = "0.2.3"
default-features = false

[dependencies.unicode-ident]
version = "1.0"

[dependencies.syn]
version = "1.0"
default-features = false
features = ["full", "parsing", "printing"]
optional = true

[dependencies.quote]
version = "1.0"
default-features = false
optional = true

[dependencies.proc-macro2]
version = "1.0"
optional = true

[dev-dependencies]
proc-macro2 = "1.0"
unicode-normalization = { version = "0.1.21", default-features = false }

[features]
# Compile-time formatting
compile-time = []

# Runtime formatting
runtime = []

# Better parsing (longer compile time)
better-parsing = ["syn", "quote", "proc-macro2"]

# Default
default = ["better-parsing"]
